--- a/index.html
+++ b/index.html
@@ -14,45 +14,25 @@
 </head>
 
 <body>
-    <!-- navigation-bar -->
 
-    <nav class="navigation-bar">
-        <div class="left-elements">
-            <a class="left-element" target="_blank" href="#">Home </a>
-            <a class="left-element" target="_blank" href="#">Club </a>
-            <a class="left-element" target="_blank" href="#">Wings Cup 2023 </a>
-            <a class="left-element" target="_blank" href="#">Umcoming Matches </a>
-            <a class="left-element" target="_blank" href="#">Contact </a>
-        </div>
-        <div class="right-elements">
-            <a class="right-element" href="">Log in <i class="fas fa-arrow-right"></i></a>
-        </div>
+<!-- first slide's structure -->
 
-    </nav>
-
-    <!-- first slider's structure -->
-
-    <header class="first-container">
-        <div class="first-container-titles">
-            <h1>
-                <span class="introduction-one">The Wings </span><span class="introduction-two">of Football
-                </span><span class="introduction-three">2021</span>
-            </h1><br>
-            <div class="live-link"> <a class="link-button" target="_blank"
-                    href="https://www.goal.com/en-in/live-scores">Watch Now <i class="fas fa-arrow-right"></i></a></div>
-
-        </div>
-        <div class="animation-one">
-
-            <img class="animated-man" src="players/11.png" alt="">
-
-            <img class="animated-ball" src="players/google.jpg" alt="">
-
-        </div>
-        <div class="background-container">
-            <img class="background-down" src="players/bg1.jpg" alt="">
-        </div>
+    <header>
+        <section class="first-slide">
+            <div class="first-slide-half">
+                <div class="first-slide-caption">
+                    <h1 class="caption-name">Conmebol <br><span>Copa America</span><br>  2021 </h1>
+                </div><br><br>
+               <div class="live-link">
+                <a class="link-button" target="blank" href="https://web.programming-hero.com/">Watch Live</a>
+               </div>
+            </div>
+            <div class="first-slide-other-half">
+                <img src="players/banner.png" alt="" width="556px" height="438px">
+            </div>
+        </section>
     </header>
+
 
     <!-- second slide's structure -->
 
@@ -146,10 +126,8 @@
 
     <section class="highlights">
         <div class="article">
-            <h1 class="article-title">All Legendery Phoenix Sences Of Wings 2021 </h1>
-            <p class="article-details">There were so many Sensetional moments in this cup.The dominated team was
-                dominated by other junior teams.so many thrilling moments,so many sorrow,so many jouy,most powerful
-                friendship strategy,the trust......</p>
+            <h1 class="article-title">All Highlights | Live Football On TV | </h1>
+            <p class="article-details">Looking for Football live match TV. Best Deals and Discounts on the Latest Products. Search For Football Live Match TV. Get Results from Several Engines at Once. Solutions. Results. Data. Answers. Knowledge. Information.......</p>
             <br>
             <a class="link-button" target="_blank"
                 href="https://www.w3schools.com/cssref/pr_text_word-spacing.asp">Watch More</a>
@@ -177,9 +155,6 @@
             </a>
             <a class="inner-link" href="#">
                 <i class="fab fa-instagram"></i>
-            </a>
-            <a class="inner-link" href="#">
-                <i class="fab fa-youtube"></i>
             </a>
 
         </div>
