--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Football </title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/b477f65985.js" crossorigin="anonymous"></script>
     <!--stylesheet-->
     <link rel="stylesheet" href="styles/style.css">
 
